--- a/random.html
+++ b/random.html
@@ -11,7 +11,7 @@
 
 <body>
     <video autoplay muted loop>
-        <source src="/video/1.mp4" type='video/mp4'>
+        <source src="./video/1.mp4" type='video/mp4'>
         Video not supported.
     </video>
     <script src="/js/custom.js"></script>
